--- a/code/API_definitions/device-reachability-status.yaml
+++ b/code/API_definitions/device-reachability-status.yaml
@@ -70,7 +70,7 @@ info:
   license:
     name: Apache 2.0
     url: https://www.apache.org/licenses/LICENSE-2.0.html
-  version: 1.0.0-rc1
+  version: 1.0.0-rc.1
   x-camara-commonalities: 0.5
 externalDocs:
   description: Product documentation at CAMARA
