--- a/code/API_definitions/device-roaming-status.yaml
+++ b/code/API_definitions/device-roaming-status.yaml
@@ -182,6 +182,7 @@ components:
     RoamingStatusResponse:
       type: object
       required:
+        - lastStatusTime
         - roaming
       properties:
         lastStatusTime:
